external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_at.exp
error[E01018]: invalid 'match'
   ┌─ tests/development/enums/matching/invalid_at.move:8:9
   │  
 8 │ ╭         match (opt) {
 9 │ │             _ @ Option::Some(128u8) => (),
10 │ │         }
   │ ╰─────────^ Invalid 'match' form. 'match' must have at least one arm

error[E01002]: unexpected token
  ┌─ tests/development/enums/matching/invalid_at.move:9:13
  │
9 │             _ @ Option::Some(128u8) => (),
  │             ^ Cannot use '_' as a binder in an '@' pattern

